Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,13 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>My Example</h1>
+        <h2>First page</h2>
+        <ol>
+            <li><a href="yandex.ru">Yandex</a></li>
+            <li><a href="sbis.ru">SBIS</a></li>
+            <li><a href="tensor.ru">Tensor</a></li>
+        </ol>
+    </body>
 </html>
